--- a/Home.css
+++ b/Home.css
@@ -1,10 +1,19 @@
+body {
+    padding-top:0px;
+    margin-top: 0px;
+    background-image: url(Wine_room_2.jpg);
+
+    
+}
+/*Navigation*/
 #header{
+    position: sticky;
     background: rgba(12, 11, 9, 0.6);
     border-bottom: 1px solid rgba(12, 11, 9, 0.6);
     z-index: 997;
     padding: 15px 15px;
     top: 40px;
-    margin-top: -20px;
+    margin-top: -50px;
 }
 ul {
     list-style-type: none;
@@ -48,7 +57,6 @@ ul {
     
    
 }
-
 .nav-home {
     margin:0px;
     color: white;
@@ -67,12 +75,6 @@ ul {
     color:white;
     
 }
-body {
-    padding:20px;
-    background-image: url(Wine_room_2.jpg);
-
-    
-}
 .resturant-name{
     font-size: 20px;
     list-style-type: none;
@@ -83,18 +85,101 @@ body {
 .slogan{
     font-size: 10px;
 }
+/*NavEnd*/
+/*SlideShow*/
+
+.Slides {display: none;}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+
+  max-width: 1000px;
+  position: relative;
+  margin-top:10%;
+  margin-bottom: auto;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/8 etc) */
+.numbertext {
+  color: #f2f2f2;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: absolute;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+
+
+/*Footer*/
 .end{
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
+    background-color:#E5E5E5;
 
 }
-.box1, .box2, .box3{
+.box1, .box2{
+    font-family: 'Raleway',sans-serif;
+    font-weight: 300;
     margin: auto;
 }
-footer{
+.box2{
+    margin-top: -5px;
+    display: flex;
+    flex-direction: column;
+}
+.box2 a{
+    text-decoration: none;
+    color: black;
+}
+.footer a{
+    display: block;
     font-size: 14px;
     color: white;
     background-color: rgba(12, 11, 9);
+}
+.icon{
+    height: 45px;
+    width: 45px;
 }
