--- a/Menu.css
+++ b/Menu.css
@@ -2,12 +2,96 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     background-color: #E5E5E5;
 }
+
+/*Navigation*/
+#header{
+    position: sticky;
+    background: rgba(12, 11, 9, 0.6);
+    border-bottom: 1px solid rgba(12, 11, 9, 0.6);
+    z-index: 997;
+    padding: 15px 15px;
+    top: 40px;
+    margin-top: -20px;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+  
+  li {
+    float: left;
+    
+  }
+  
+  li:last-child {
+    border-right: none;
+  }
+  
+  li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 5px 6px;
+    text-decoration: none;
+  }
+  
+  li a:hover:not(.active) {
+    border-width:0 0 2px 0 ;
+    border-color: #d9ba85;
+    border-style: solid;
+  }
+  
+  .active {
+    background-color: #d9ba85;
+  }
+.nav-item {
+    
+    color:white;
+    padding: 5px;
+    font-family: 'Raleway', sans-serif;
+    font-size: 25px;
+    
+   
+}
+.nav-home {
+    margin:0px;
+    color: white;
+    border-width:2px solid white;
+    padding-bottom: 10px;
+
+}
+.nav-menu {
+    margin:10px;
+    color:white;
+    padding-bottom: 10px;
+    
+}
+.nav-contact {
+    margin: 10px;
+    color:white;
+    
+}
+.resturant-name{
+    font-size: 20px;
+    list-style-type: none;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    font-weight: 100%;
+}
+.slogan{
+    font-size: 10px;
+}
+/*NavEnd*/
+/*Food*/
+
 .box{
     text-align: center;
     background-image: url(MenuBackgroud.webp);
-    width: 95%;
+    width: 80%;
     padding: 15px;
-    max-width: 800px;
+    max-width: 1500px;
     margin: auto;
     border:6px solid #363636;
 
@@ -35,4 +119,37 @@ body{
 h1{
     font-family: 'Times New Roman', Times, serif;
     font-size: 30px;
+}
+/*Footer*/
+.end{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    background-color:white;
+
+}
+.box1, .box2{
+    font-family: 'Raleway',sans-serif;
+    font-weight: 300;
+    margin: auto;
+}
+.box2{
+    margin-top: -5px;
+    display: flex;
+    flex-direction: column;
+}
+.box2 a{
+    text-decoration: none;
+    color: black;
+}
+.footer a{
+    display: block;
+    font-size: 14px;
+    color: white;
+    background-color: rgba(12, 11, 9);
+}
+.icon{
+    height: 45px;
+    width: 45px;
 }
